--- a/update-subscription.yml
+++ b/update-subscription.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    timeout-minutes: 30  # 设置作业超时时间
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -23,10 +24,23 @@ jobs:
       - name: Run w-sub to update subscriptions
         run: python w-sub.py
       
+      - name: Upload debug logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: debug-logs
+          path: |
+            w-sub.log
+            node_test_debug.txt
+      
       - name: Commit and push changes
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add subscription_all.txt subscription_best.txt README.md
-          git commit -m 'Update subscription files and README'
-          git push
+          # 检查是否有更改
+          if git diff --staged --quiet; then
+            echo "没有检测到更改，跳过提交"
+          else
+            git commit -m 'Update subscription files and README'
+            git push
+          fi
