--- a/.github/workflows/update-subscription.yml
+++ b/.github/workflows/update-subscription.yml
@@ -1,4 +1,4 @@
-name: Update Subscription and README
+name: Update Subscription
 
 on:
   schedule:
@@ -25,22 +25,22 @@ jobs:
         run: python w-sub.py
       
       - name: Upload debug logs
-        uses: actions/upload-artifact@v4  # 更新到v4版本
+        uses: actions/upload-artifact@v4
         with:
           name: debug-logs
           path: |
             w-sub.log
-            node_test_debug.txt
       
       - name: Commit and push changes
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          git add subscription_all.txt subscription_best.txt README.md
+          git add subscription_all.txt
           # 检查是否有更改
-          if git diff --staged --quiet; then
+          if git diff --staged --quiet;
+          then
             echo "没有检测到更改，跳过提交"
           else
-            git commit -m 'Update subscription files and README'
+            git commit -m 'Update subscription file'
             git push
           fi
