--- a/.github/workflows/update-subscription.yml
+++ b/.github/workflows/update-subscription.yml
@@ -45,3 +45,19 @@ jobs:
             git commit -m 'Update subscription files'
             git push
           fi
+
+      # 修改后
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          # 添加生成的订阅文件
+          git add subscription_all.txt
+          # 检查是否有更改
+          if git diff --staged --quiet;
+          then
+            echo "没有检测到更改，跳过提交"
+          else
+            git commit -m 'Update subscription files'
+            git push
+          fi
