--- a/.github/workflows/update-subscription.yml
+++ b/.github/workflows/update-subscription.yml
@@ -47,16 +47,17 @@ jobs:
           fi
 
       # 修改后
+      # Update the Commit and push changes step to remove the country_files reference
       - name: Commit and push changes
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          # 添加生成的订阅文件
+          # Only add the subscription_all.txt file since country_files/ no longer exists
           git add subscription_all.txt
-          # 检查是否有更改
+          # Check if there are any changes
           if git diff --staged --quiet;
           then
-            echo "没有检测到更改，跳过提交"
+            echo "No changes detected, skipping commit"
           else
             git commit -m 'Update subscription files'
             git push
