--- a/.github/workflows/update-subscription.yml
+++ b/.github/workflows/update-subscription.yml
@@ -4,6 +4,22 @@ on:
   schedule:
     - cron: '0 */6 * * *'  # 每6小时执行一次
   workflow_dispatch:  # 允许手动触发
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'INFO'
+        type: choice
+        options:
+          - DEBUG
+          - INFO
+          - WARNING
+          - ERROR
+      checkConnectivity:
+        description: 'Check node connectivity'
+        required: false
+        default: 'false'
+        type: boolean
 
 jobs:
   update:
@@ -12,17 +28,34 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
+        with:
+          fetch-depth: 1
+          persist-credentials: true
+          
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+          cache: 'pip'  # 启用pip缓存
+          cache-dependency-path: 'requirements.txt'
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       
-      - name: Run w-sub to update subscriptions
-        run: python w-sub.py
+      - name: Run W-sub to update subscriptions
+        run: |
+          # 构建命令参数
+          ARGS=""
+          if [ "${{ inputs.checkConnectivity }}" = "true" ]; then
+            ARGS+=" --check-connectivity"
+          fi
+          if [ "${{ inputs.logLevel }}" != "" ]; then
+            ARGS+=" --loglevel ${{ inputs.logLevel }}"
+          fi
+          
+          python W-sub.py $ARGS
       
       - name: Upload debug logs
         uses: actions/upload-artifact@v4
@@ -30,18 +63,38 @@ jobs:
           name: debug-logs
           path: |
             w-sub.log
+          retention-days: 7  # 日志保留7天
+      
+      - name: Check if subscription file exists
+        id: check_file
+        run: |
+          if [ -f "subscriptions_output/subscription_all.txt" ]; then
+            echo "file_exists=true" >> $GITHUB_OUTPUT
+            echo "文件存在，大小: $(du -h subscriptions_output/subscription_all.txt)" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "file_exists=false" >> $GITHUB_OUTPUT
+          fi
       
       - name: Commit and push changes
+        if: steps.check_file.outputs.file_exists == 'true'
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          # 添加生成的订阅文件
-          git add subscription_all.txt
+          # 添加生成的订阅文件，注意正确的路径
+          git add subscriptions_output/subscription_all.txt
+          git add w-sub.log || echo "日志文件未修改"
           # 检查是否有更改
           if git diff --staged --quiet;
           then
-            echo "没有检测到更改，跳过提交"
+            echo "没有检测到更改，跳过提交" >> $GITHUB_STEP_SUMMARY
           else
             git commit -m 'Update subscription files'
-            git push
+            git push origin HEAD:${GITHUB_REF#refs/heads/}
+            echo "订阅文件已更新并推送" >> $GITHUB_STEP_SUMMARY
           fi
+      
+      - name: Output failure message if file not found
+        if: steps.check_file.outputs.file_exists == 'false'
+        run: |
+          echo "::error::订阅文件未生成，可能程序运行失败"
+          echo "订阅文件生成失败，请查看日志了解详情" >> $GITHUB_STEP_SUMMARY
